--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
-<?php
-
-$path = '';
-
-$page = 1;
-
-?>
-
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
 
-	<?php include($path.'inc/-brains.php');?>
+	<meta name="description" content="Nathan Philpot. I design usable interfaces and enjoyable user experiences. From small mobile apps to international enterprise solutions. My goal is to make complexity simple for the user. I believe design matters. I believe design is honest."/>
+
+	<meta name="keywords" content="UX, Interaction design, user-experience, usability, interface design, ui, prototyping, mobile, design, web design, HTML, CSS, Javascript, wireframes, accessibility, icons"/>
+
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Nathan Philpot, Design is Honest</title>
+
+	<link rel="stylesheet" type="text/css" href="css/ui.css" />
+
+	<script src="<?php echo $path;?>js/modernizr.js" type="text/javascript"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.0/less.min.js"></script>
+	<script src="<?php echo $path;?>js/email.js" type="text/javascript"></script>
+
+	<script src="<?php echo $path;?>js/scripts.js" type="text/javascript"></script>
 
 </head>
 <body>
 
 	<div class="page">
-		<?php include($path.'inc/-nav.php');?>
 		<p>I design usable interfaces and enjoyable user experiences. From small mobile apps to international enterprise solutions.</p>
 		<p>Great ideas are a combination of data, research and going with your gut. Iterative prototyping, user testing, frequent interactions with members of the team, all this with the goal of learning, has yielded the best results for me. <abbr>UX</abbr> is all about the details. The user experience is the product and shows how much you care.</p>
 		<p>My process for designing a product is a combination of things I have learned and seen work. I am a big fan of <a href="https://medium.com/@nwalkingshaw/disruption-in-an-88-year-old-company-part-i-f63b9d81132c">Directed Discovery</a> (<abbr>DD</abbr>). I look for <a href="http://www.sce.carleton.ca/faculty/tanev/TTMG_5103/Articles/Christensen_Finding_the_right_job_for_your_product_MIT_Sloan_2007.pdf">jobs to be done</a>. <a href="http://shop.oreilly.com/product/0636920033851.do"><i>User Story Mapping</i></a> has been a big influence.</p>
 		<p>I try and approach new challenges with an open mind. Focusing on outcome and changing peoples lives. I always like to be a little out of my league, because then I know I am learning and growing.</p>
 		<p>I believe design is honest.</p>
-		<?php include($path.'inc/-footer.php');?>
 	</div>
 
 </body>
