--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Nathan Philpot, Design is Honest</title>
+	<title>Nathan Philpot. Design is honest.</title>
 
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 
@@ -21,7 +21,54 @@
 <body>
 
 	<div class="page">
-		<p>Coming soon.</p>
+		<nav>
+			<ul>
+				<li class="logo"><a href="https://nathanrp.github.io"><img src="img/nathan.png" alt="Nathan" /></a></li>
+				<li><a href="mailto:nathanphilpot@gmail.com">Email</a></li>
+				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
+				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
+			</ul>
+		</nav>
+		<div class="content">
+			<section class="portfolio">
+				<figure>
+					<img src="img/img.png" alt="Portfolio" />
+					<figcaption></figcaption>
+				</figure>
+				<figure>
+					<img src="img/img.png" alt="Portfolio" />
+					<figcaption></figcaption>
+				</figure>
+				<figure>
+					<img src="img/img.png" alt="Portfolio" />
+					<figcaption></figcaption>
+				</figure>
+				<figure>
+					<img src="img/img.png" alt="Portfolio" />
+					<figcaption></figcaption>
+				</figure>
+				<figure>
+					<img src="img/img.png" alt="Portfolio" />
+					<figcaption></figcaption>
+				</figure>
+				<figure>
+					<img src="img/img.png" alt="Portfolio" />
+					<figcaption></figcaption>
+				</figure>
+				<figure>
+					<img src="img/img.png" alt="Portfolio" />
+					<figcaption></figcaption>
+				</figure>
+				<figure>
+					<img src="img/img.png" alt="Portfolio" />
+					<figcaption></figcaption>
+				</figure>
+				<figure>
+					<img src="img/img.png" alt="Portfolio" />
+					<figcaption></figcaption>
+				</figure>
+			</section>
+		</div>
 	</div>
 
 </body>
