--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
 				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
 			</ul>
+			<ul class="meta">
+				<li>&copy; 2021 Nathan Philpot, Inc.</li>
+				<li>&#x1F44D;</li>
+			</ul>
 		</nav>
 		<div class="content">
 			<section class="portfolio">
@@ -70,6 +74,17 @@
 			</section>
 		</div>
 	</div>
+
+<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	ga('create', 'UA-3470140-1', 'nathanphilpot.com');
+	ga('send', 'pageview');
+	
+</script>
 
 </body>
 </html>
