--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-	<script src="js/email.js" type="text/javascript"></script>
-
 	<script src="js/scripts.js" type="text/javascript"></script>
 
 </head>
@@ -27,6 +25,7 @@
 				<li><a href="mailto:nathanphilpot@gmail.com">Email</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
 				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
+				color
 			</ul>
 			<ul class="meta">
 				<li>&copy; 2021 Nathan Philpot, Inc.</li>
