--- a/1.html
+++ b/1.html
@@ -32,43 +32,15 @@
 			</ul>
 		</nav>
 		<div class="content">
-			<section class="portfolio">
+			<section class="use-case">
 				<figure>
-					<a href="1.html"><img src="img/img.png" alt="Portfolio" /></a>
+					<img class="hero" src="img/ml-1.png" alt="Portfolio" />
 					<figcaption></figcaption>
 				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
+                <div class="reading">
+    				<h1>Title</h1>
+                    <p>Words</p>
+                </div>
 			</section>
 		</div>
 	</div>
