--- a/index.html
+++ b/index.html
@@ -21,21 +21,20 @@
 	<div class="page">
 		<nav>
 			<ul>
-				<li class="logo"><a href="https://nathanrp.github.io"><img src="img/nathan.png" alt="Nathan" /></a></li>
+				<li class="logo"><a href="https://nathanrp.github.io">Nathan</a></li>
 				<li><a href="mailto:nathanphilpot@gmail.com">Email</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
 				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
 			</ul>
 			<ul class="meta">
-				<li>&copy; 2021 Nathan Philpot, Inc.</li>
+				<li>&copy; 2021 NP, Inc.</li>
 				<li>&#x1F44D;</li>
 			</ul>
 		</nav>
 		<div class="content">
 			<section class="portfolio">
 				<figure>
-					<a href="1.html"><img src="img/img.png" alt="Portfolio" /></a>
-					<figcaption></figcaption>
+					<a href="1.html"><img src="img/ml.png" alt="Portfolio &rarr; Mavenlink" /></a>
 				</figure>
 				<figure>
 					<img src="img/img.png" alt="Portfolio" />
