--- a/1.html
+++ b/1.html
@@ -21,26 +21,51 @@
 	<div class="page">
 		<nav>
 			<ul>
-				<li class="logo"><a href="https://nathanrp.github.io"><img src="img/nathan.png" alt="Nathan" /></a></li>
+				<li class="logo"><a href="https://nathanrp.github.io">Nathan</a></li>
 				<li><a href="mailto:nathanphilpot@gmail.com">Email</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
 				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
 			</ul>
 			<ul class="meta">
-				<li>&copy; 2021 Nathan Philpot, Inc.</li>
-				<li>&#x1F44D;</li>
+				<li>&copy; 2021 NP, Inc.</li>
+				<li>&#x1f44d;</li>
 			</ul>
 		</nav>
 		<div class="content">
 			<section class="use-case">
-				<figure>
-					<img class="hero" src="img/ml-1.png" alt="Portfolio" />
-					<figcaption></figcaption>
+				<figure class="hero">
+					<img src="img/ml-1.gif" alt="Portfolio" />
+					<figcaption>Some visual design liberties were taken. &#x1f92b; Ok, ok, a lot were taken. &#x1f605;</figcaption>
 				</figure>
                 <div class="reading">
-    				<h1>Title</h1>
-                    <p>Words</p>
+    				<h1>Mavenlink</h1>
+                    <p><a href="https://www.mavenlink.com" target="_blank">Mavenlink</a> describes itself as the &ldquo;industry cloud for professional services&trade;.&rdquo; Our product help service teams with project management and resource management.</p>
+					<p>Around 2018 they wanted to go be the leader in resource managment for professional services. Mavenlink felt that no one else was doing what they wanted to do. This would be key to their future growth and market differentiation.</p>
+					<p>We tried to target resource managers. The resource manager&rsquo;s responsibilites include balancing work (demand) and resources (supply). A lot of their time is negotiating with project managers, people managers, and helping people do work they want to do and grow their careers. Depending on the size of the company the person who performs these responsibilites can be hard to define.</p>
+					<p>I was asked to be on the team that would be responsible for designing and building this. We started out with team of ~6 engineers, a product manager and myself. By the end it had grown to about double that to ensure that we could get everything we thought needed to get done to deliver enough value to the customer that they would be excited to use this new part of our product. My most important partner in this process was the product manager I worked with. Also the engineering team did an amazing job of building a front-end <abbr>UI</abbr> that was responsive and allowed the users to feel they could <a href="https://developer.apple.com/design/human-interface-guidelines/ios/overview/themes/" target="_blank">see the immediate, visible results of their actions.</a> I was responsible for conducting research (over 50 interviews), sharing reasons behind decisions and directions with business leadership, story mapping, building prototypes and designing the final user interface.</p>
+					<figure class="detail">
+						<img src="img/ml-4.jpg" alt="Portfolio" />
+						<figcaption>Not actual research participants. Honoring the privacy agreements yo! Photo by <a href="https://unsplash.com/@arlington_research?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Arlington Research</a> on <a href="https://unsplash.com/s/photos/computer-research?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
+						</figcaption>
+					</figure>
+					<p>There were a ton of trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable businss and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up display both. We released to all our customers about two years later.</p>
+					<figure class="detail">
+						<img src="img/ml-2.gif" alt="Portfolio" />
+						<figcaption>Moving allocations, simply drag and drop.</figcaption>
+					</figure>
+					<p>Something we learned is that our customers (and I think pretty much everyone out there) have a high expectation for interaction design. They expect the interaction, usability, and feature set or tools available to be as good as the best bar interface they have ever used. We released it without the ability to split allocation and we heard about it right away that it was missing.</p>
+					<figure class="detail">
+						<img src="img/ml-3.gif" alt="Portfolio" />
+						<figcaption>Splitting allocations.</figcaption>
+					</figure>
                 </div>
+				<figure class="detail">
+					<img src="img/ml-5.gif" alt="Portfolio" />
+					<figcaption>Mobile concept. Sadly never built.</figcaption>
+				</figure>
+				<div class="reading">
+					<a href="https://nathanrp.github.io">&larr; Back Home</a>
+				</div>
 			</section>
 		</div>
 	</div>
