fixes to use case 1

--- a/1.html
+++ b/1.html
@@ -58,6 +58,8 @@
 						<img src="img/ml-3.gif" alt="Portfolio" />
 						<figcaption>Splitting allocations.</figcaption>
 					</figure>
+					<p>Explorations in a mobile form factor.</p>
+
                 </div>
 				<figure class="detail">
 					<img src="img/ml-5.gif" alt="Portfolio" />
