--- a/1.html
+++ b/1.html
@@ -58,7 +58,7 @@
 						<img src="img/ml-3.gif" alt="Portfolio" />
 						<figcaption>Splitting allocations.</figcaption>
 					</figure>
-					<p>Explorations in a mobile form factor.</p>
+					<p>Explorations for a smaller screen.</p>
 
                 </div>
 				<figure class="detail">
