--- a/index.html
+++ b/index.html
@@ -37,36 +37,7 @@
 					<a href="1.html"><img src="img/ml.png" alt="Portfolio &rarr; Mavenlink" /></a>
 				</figure>
 				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
-				</figure>
-				<figure>
-					<img src="img/img.png" alt="Portfolio" />
-					<figcaption></figcaption>
+					<img src="img/ccc.png" alt="Customers, collaboration, confidence. My take on the design process." />
 				</figure>
 			</section>
 		</div>
