--- a/process.html
+++ b/process.html
@@ -28,17 +28,24 @@
 			</ul>
 			<ul class="meta">
 				<li>&copy; 2021 NP, Inc.</li>
-				<li>&#x1F44D;</li>
+				<li>&#x1f44d;</li>
 			</ul>
 		</nav>
 		<div class="content">
-			<section class="portfolio">
-				<figure>
-					<a href="mavenlink.html"><img src="img/ml.png" alt="Portfolio &rarr; Mavenlink" /></a>
+			<section class="use-case">
+				<figure class="hero">
+					<img src="img/ccc-hero.png" alt="Portfolio" />
+					<figcaption>Bring friends, the design process is fun! Photo by <a href="https://unsplash.com/@jeisblack?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Jason Blackeye</a> on <a href="https://unsplash.com/s/photos/beach-party?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
+                    </figcaption>
 				</figure>
-				<figure>
-					<a href="process.html"><img src="img/ccc.png" alt="Customers, collaboration, confidence. My take on the design process." /></a>
-				</figure>
+                <div class="reading">
+    				<h1>Customers, collaboration, confidence. My take on the design process.</h1>
+                    <p>My design process is pretty simple. Talk to customers, a lot. Collaborate with your team: product managers, engineers, researchers, writers, <abbr>SME</abbr>s. Prototype until you are confident in your solution. Then release it into the wild and see what happens. Everything else is&hellip; it depends. </p>
+
+                </div>
+				<div class="reading">
+					<a href="https://nathanrp.github.io">&larr; Back Home</a>
+				</div>
 			</section>
 		</div>
 	</div>
