--- a/mavenlink.html
+++ b/mavenlink.html
@@ -48,7 +48,7 @@
 						<figcaption>Not actual research participants. Honoring the privacy agreements yo! Photo by <a href="https://unsplash.com/@arlington_research?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Arlington Research</a> on <a href="https://unsplash.com/s/photos/computer-research?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
 						</figcaption>
 					</figure>
-					<p>There were a ton of trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable businss and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up display both. We released to all our customers about two years later.</p>
+					<p>There were a ton of trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable businss and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up displaying both. We released to all our customers about two years later.</p>
 					<figure class="detail">
 						<img src="img/ml-2.gif" alt="Portfolio" />
 						<figcaption>Moving allocations, simply drag and drop.</figcaption>
