--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 				<figure>
 					<a href="process.html"><img src="img/ccc.png" alt="Customers, collaboration, confidence. My take on the design process." /></a>
 				</figure>
+				<figure>
+					<a href="wgu.html"><img src="img/wgu.png" alt="WGU" /></a>
+				</figure>
 				<div class="under-construction">
 					<p>Check back, there is more to come.</p>
 					<p>P.S., <em>today</em> is the first day, of the rest of your life.</p>
