--- a/wgu.html
+++ b/wgu.html
@@ -44,7 +44,7 @@
                     <p>When I started on this project, it was just me and one iOS engineer. I played the role of product manager and designer for about the first ~9 months. At a higher education institution stakeholders included product and business leadership, as well as working with education stakeholders. I set the the direction and vision for the app, worked with the stakeholders to outline a roadmap of what our first release might look like. While doing this, I conducted research, <a href="https://www.jpattonassociates.com/story-mapping/" target="_blank">story mapped</a> and prototyped with engineers and other designers. By the time I ended up leaving <abbr>WGU</abbr>, the team had grown to include a product manager, and on and off shore engineering teams for both iOS and Android devices.</p>
                     <figure class="detail">
 						<img src="img/wgu-3.jpg" alt="Portfolio" />
-						<figcaption>Sticky notes and whiteboards.</a>
+						<figcaption>Sticky notes and whiteboards. Is it even design without them?</a>
 						</figcaption>
 					</figure>
                     <p>One of the funnest parts of this project was talking with student and understanding where and how they learned. In the <abbr>WGU</abbr> office building where we worked, there was a testing center on the ground floor. I would hangout down there and as students finished their tests, I asked if they would like to participate in some user research. The ones that had the time, and agreed, I conducted interviews and tested prototypes and information architecture ideas. I also worked with educators and asked how might we bake into the experience ways to help students learn better.</p>
