more use cases.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 				<figure>
 					<a href="wgu.html"><img src="img/wgu.png" alt="WGU" /></a>
 				</figure>
+				<figure>
+					<a href="hrb.html"><img src="img/hrb.png" alt="H&amp;R Block" /></a>
+				</figure>
 				<div class="under-construction">
 					<p>Check back, there is more to come.</p>
 					<p>P.S., <em>today</em> is the first day, of the rest of your life.</p>
