--- a/hrb.html
+++ b/hrb.html
@@ -40,12 +40,12 @@
                 <div class="reading">
     				<h1><abbr>HR Block</abbr></h1>
                     <p>At <a href="https://www.hrblock.com" target="_blank">H&amp;R Block</a> I was the lead designer on their tax pro product. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue.</p>
-                    <p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns.</p>
+                    <p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
                     <p>The tax pro product was a windows client application installed on stations in H&amp;R Block offices.</p>
                     <p>A big part of the job was understanding the Tax Pro and their mental models and emotional needs when preparing someone elses taxes. The Tax Pro had to have confidence when using the product, because they had to be confident for their customers when preparing their taxes.</p>
                     <figure class="detail">
 						<img src="img/hrb-2.jpg" alt="Portfolio" />
-						<figcaption>Field observations. Tax Pros in a retail office.</figcaption>
+						<figcaption>Field observations.</figcaption>
 					</figure>
                     <p>There where thousands of screens in this product and teams working on it around world. So one thing I did was create &amp; and shared principles to help teams develop screens.</p>
                     <figure class="detail">
@@ -59,7 +59,7 @@
 				</div>
                 <figure class="detail">
                     <img src="img/hrb-5.png" alt="Portfolio" />
-                    <figcaption>Tax Pro product.</figcaption>
+                    <figcaption>That is some intense form design!</figcaption>
                 </figure>
                 <div class="reading">
                     <a href="https://nathanrp.github.io">&larr; Back Home</a>
