--- a/hrb.html
+++ b/hrb.html
@@ -56,6 +56,10 @@
 						<img src="img/hrb-4.png" alt="Portfolio" />
 						<figcaption>Product Experience Principles</figcaption>
 					</figure>
+                    <figure class="detail">
+						<img src="img/hrb-6.jpg" alt="Portfolio" />
+						<figcaption>User Journeys</figcaption>
+					</figure>
 				</div>
                 <figure class="detail">
                     <img src="img/hrb-5.png" alt="Portfolio" />
