--- a/hrb.html
+++ b/hrb.html
@@ -35,7 +35,7 @@
 			<section class="use-case">
 				<figure class="hero">
 					<img src="img/hrb-1.png" alt="Portfolio" />
-					<figcaption>Both taxes and the brain can be a complex messy thing.</figcaption>
+					<figcaption>Both taxes and the brain can be a complex, illogical, messy thing.</figcaption>
 				</figure>
                 <div class="reading">
     				<h1><abbr>HR Block</abbr></h1>
