--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 				<figure>
 					<a href="hrb.html"><img src="img/hrb.png" alt="H&amp;R Block" /></a>
 				</figure>
+				<figure>
+					<a href="tcs.html"><img src="img/tcs.png" alt="TCS" /></a>
+				</figure>
 				<div class="under-construction">
 					<p>Check back, there is more to come.</p>
 					<p>P.S., <em>today</em> is the first day, of the rest of your life.</p>
