--- a/process.html
+++ b/process.html
@@ -40,7 +40,7 @@
 				</figure>
                 <div class="reading">
     				<h1>Customers, collaboration, confidence. My take on the design process.</h1>
-                    <p>My design process is pretty simple. Talk to customers, a lot. Collaborate with your team: product managers, engineers, researchers, writers, <abbr>SME</abbr>s. Prototype until you are confident in your solution. Then release it into the wild and see what happens. Everything else is&hellip; it depends. </p>
+                    <p>My design process is pretty simple. Talk to customers, a lot. Collaborate with your team: product managers, engineers, researchers, data, writers, <abbr>SME</abbr>s. Prototype until you are confident in your solution. Then release it into the wild and see what happens. Everything else is&hellip; it depends. </p>
                 </div>
 				<div class="reading">
 					<a href="https://nathanrp.github.io">&larr; Back Home</a>
