--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 				<figure>
 					<a href="tcs.html"><img src="img/tcs.png" alt="TCS" /></a>
 				</figure>
+				<figure>
+					<img src="img/photo-1.jpg" alt="TCS" />
+					<figcaption>Teamwork</figcaption>
+				</figure>
 				<div class="under-construction">
 					<p>Check back, there is more to come.</p>
 					<p>P.S., <em>today</em> is the first day, of the rest of your life.</p>
