--- a/hrb.html
+++ b/hrb.html
@@ -2,6 +2,16 @@
 <html dir="ltr" lang="en-US">
 <head>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3470140-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-3470140-1');
+	</script>
+
 	<meta name="description" content="Nathan Philpot. I design usable interfaces and enjoyable user experiences. From small mobile apps to international enterprise solutions. My goal is to make complexity simple for the user. I believe design matters. I believe design is honest."/>
 
 	<meta name="keywords" content="design leadership, UX, Interaction design, user-experience, usability, interface design, ui, prototyping, mobile, design, web design, HTML, CSS, Javascript, wireframes, accessibility, icons"/>
@@ -12,6 +22,8 @@
 	<title>Nathan Philpot. Design is honest.</title>
 
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+
+	<script   src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
 
 	<script src="js/scripts.js" type="text/javascript"></script>
 
@@ -25,6 +37,7 @@
 				<li><a href="mailto:nathanphilpot@gmail.com">Email</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
 				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
+				<li class="totop"><a>&uarr;</a></li>
 			</ul>
 			<ul class="meta">
 				<li>&copy; 2021 NP, Inc.</li>
@@ -39,15 +52,15 @@
 				</figure>
                 <div class="reading">
     				<h1><abbr>HR Block</abbr></h1>
-                    <p>At <a href="https://www.hrblock.com" target="_blank">H&amp;R Block</a> I was the lead designer on their tax pro product. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue.</p>
+                    <p><a href="https://www.hrblock.com" target="_blank">H&amp;R Block</a> is the world&rsquo;s largest tax service provider. Working at H&amp;R Block was a great experience. I was the lead designer on their tax-pro product. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue. I worked with people that were truly passionate and cared about their customers. Because they cared, going through the discovery, research and design process was natural for them.</p>
+					<p>I had a lot to learn about taxes. There was a lot of expertise and knowledge inside the building. I started talking to everyone. I also did a lot of field observation. This was invaluable. Seeing tax pros use the product and interact with their clients was key to building a great product and experience. Hands down the best way to improve the experience is to watch people using your products.</p>
                     <p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
-                    <p>The tax pro product was a windows client application installed on stations in H&amp;R Block offices.</p>
-                    <p>A big part of the job was understanding the Tax Pro and their mental models and emotional needs when preparing someone elses taxes. The Tax Pro had to have confidence when using the product, because they had to be confident for their customers when preparing their taxes.</p>
+                    <p>A big part of the job was understanding the Tax Pro and the retail experience. The Tax Pro had to have confidence when using the product, because they had to be confident for their customers when preparing their taxes.</p>
                     <figure class="detail">
 						<img src="img/hrb-2.jpg" alt="Portfolio" />
 						<figcaption>Field observations.</figcaption>
 					</figure>
-                    <p>There where thousands of screens in this product and teams working on it around world. So one thing I did was create &amp; and shared principles to help teams develop screens.</p>
+                    <p>There where thousands of screens in this product and teams working on it around world. So one thing I did was create &amp; and shared principles to help product managers and engineers think about the experience.</p>
                     <figure class="detail">
 						<img src="img/hrb-3.png" alt="Portfolio" />
 						<figcaption>Product Experience Principles</figcaption>
@@ -60,6 +73,7 @@
 						<img src="img/hrb-6.jpg" alt="Portfolio" />
 						<figcaption>User Journeys</figcaption>
 					</figure>
+					<p>The tax-pro product was a windows client application installed on stations in H&amp;R Block offices.</p>
 				</div>
                 <figure class="detail">
                     <img src="img/hrb-5.png" alt="Portfolio" />
