--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html dir="ltr" lang="en-US">
 <head>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3470140-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-3470140-1');
+	</script>
+
 	<meta name="description" content="Nathan Philpot. I design usable interfaces and enjoyable user experiences. From small mobile apps to international enterprise solutions. My goal is to make complexity simple for the user. I believe design matters. I believe design is honest."/>
 
 	<meta name="keywords" content="design leadership, UX, Interaction design, user-experience, usability, interface design, ui, prototyping, mobile, design, web design, HTML, CSS, Javascript, wireframes, accessibility, icons"/>
@@ -12,8 +22,6 @@
 	<title>Nathan Philpot. Design is honest.</title>
 
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
-
-	<script src="js/scripts.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -59,17 +67,6 @@
 			</section>
 		</div>
 	</div>
-
-<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	
-	ga('create', 'UA-3470140-1', 'nathanphilpot.com');
-	ga('send', 'pageview');
-	
-</script>
 
 </body>
 </html>
