--- a/wgu.html
+++ b/wgu.html
@@ -2,6 +2,16 @@
 <html dir="ltr" lang="en-US">
 <head>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3470140-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-3470140-1');
+	</script>
+
 	<meta name="description" content="Nathan Philpot. I design usable interfaces and enjoyable user experiences. From small mobile apps to international enterprise solutions. My goal is to make complexity simple for the user. I believe design matters. I believe design is honest."/>
 
 	<meta name="keywords" content="design leadership, UX, Interaction design, user-experience, usability, interface design, ui, prototyping, mobile, design, web design, HTML, CSS, Javascript, wireframes, accessibility, icons"/>
@@ -12,6 +22,8 @@
 	<title>Nathan Philpot. Design is honest.</title>
 
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+
+	<script   src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
 
 	<script src="js/scripts.js" type="text/javascript"></script>
 
@@ -25,6 +37,7 @@
 				<li><a href="mailto:nathanphilpot@gmail.com">Email</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
 				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
+				<li class="totop"><a>&uarr;</a></li>
 			</ul>
 			<ul class="meta">
 				<li>&copy; 2021 NP, Inc.</li>
