--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</figure>
 				<figure>
 					<img src="img/photo-1.jpg" alt="TCS" />
-					<figcaption>Teamwork</figcaption>
+					<figcaption>Teamwork makes the dream work.</figcaption>
 				</figure>
 				<div class="under-construction">
 					<p>Check back, there is more to come.</p>
