--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 					<img src="img/photo-1.jpg" alt="TCS" />
 					<figcaption>Teamwork makes the dream work.</figcaption>
 				</figure>
+				<figure>
+					<img src="img/photo-2.jpg" alt="TCS" />
+					<figcaption>What it&rsquo;s all about.</figcaption>
+				</figure>
 				<div class="under-construction">
 					<p>Check back, there is more to come.</p>
 					<p>P.S., <em>today</em> is the first day, of the rest of your life.</p>
