No more splash font

--- a/hrb.html
+++ b/hrb.html
@@ -33,7 +33,7 @@
 	<div class="page">
 		<nav>
 			<ul>
-				<li class="logo"><a href="https://nathanrp.github.io">Nathan</a></li>
+				<li class="logo"><a href="https://nathanrp.github.io">Nathan Philpot</a></li>
 				<li><a href="mailto:nathanphilpot@gmail.com">Email</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
 				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
@@ -48,10 +48,10 @@
 			<section class="use-case">
 				<figure class="hero">
 					<img src="img/hrb-1.png" alt="Portfolio" />
-					<figcaption>Both taxes and the brain can be a complex, illogical, messy thing.</figcaption>
+					<figcaption>Tax questions, mental models and emotions.</figcaption>
 				</figure>
                 <div class="reading">
-    				<h1><abbr>HR Block</abbr></h1>
+    				<h1><abbr>H&amp;R Block</abbr></h1>
                     <p><a href="https://www.hrblock.com" target="_blank">H&amp;R Block</a> is the world&rsquo;s largest tax service provider. Working at H&amp;R Block was a great experience. I was the lead designer on their tax-pro product. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue. I worked with people that were truly passionate and cared about their customers. Because they cared, going through the discovery, research and design process was natural for them.</p>
 					<p>I had a lot to learn about taxes. There was a lot of expertise and knowledge inside the building. I started talking to everyone. I also did a lot of field observation. This was invaluable. Seeing tax pros use the product and interact with their clients was key to building a great product and experience. Hands down the best way to improve the experience is to watch people using your products.</p>
                     <p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
