--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="page">
 		<nav>
 			<ul>
-				<li class="logo"><a href="https://nathanrp.github.io">Nathan</a></li>
+				<li class="logo"><a href="https://nathanrp.github.io">Nathan Philpot</a></li>
 				<li><a href="mailto:nathanphilpot@gmail.com">Email</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
 				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
@@ -45,9 +45,6 @@
 					<a href="mavenlink.html"><img src="img/ml.png" alt="Portfolio &rarr; Mavenlink" /></a>
 				</figure>
 				<figure>
-					<a href="process.html"><img src="img/ccc.png" alt="Customers, collaboration, confidence. My take on the design process." /></a>
-				</figure>
-				<figure>
 					<a href="wgu.html"><img src="img/wgu.png" alt="WGU" /></a>
 				</figure>
 				<figure>
@@ -55,6 +52,9 @@
 				</figure>
 				<figure>
 					<a href="tcs.html"><img src="img/tcs.png" alt="TCS" /></a>
+				</figure>
+				<figure>
+					<a href="process.html"><img src="img/ccc.png" alt="Customers, collaboration, confidence. My take on the design process." /></a>
 				</figure>
 				<figure>
 					<img src="img/photo-1.jpg" alt="TCS" />
