--- a/tcs.html
+++ b/tcs.html
@@ -33,7 +33,7 @@
 	<div class="page">
 		<nav>
 			<ul>
-				<li class="logo"><a href="https://nathanrp.github.io">Nathan</a></li>
+				<li class="logo"><a href="https://nathanrp.github.io">Nathan Philpot</a></li>
 				<li><a href="mailto:nathanphilpot@gmail.com">Email</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/">LinkedIn</a></li>
 				<li><a href="https://twitter.com/nathanphilpot">Twitter</a></li>
