--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 					<figcaption>What it&rsquo;s all about.</figcaption>
 				</figure>
 				<div class="under-construction">
-					<p>Check back, there is more to come.</p>
-					<p>P.S., <em>today</em> is the first day, of the rest of your life.</p>
+					<p>P.S., today is the first day, of the rest of your life.</p>
 				</div>
 			</section>
 		</div>
