--- a/tcs.html
+++ b/tcs.html
@@ -47,7 +47,7 @@
 			<section class="use-case">
 				<figure class="hero">
 					<img src="img/tcs-1.gif" alt="Portfolio" />
-					<figcaption>I produced a lot, heaps, tons, copious, massive amounts of <abbr>UI</abbr>.</figcaption>
+					<figcaption>Lots of <abbr>UI</abbr> design and design systems.</figcaption>
 				</figure>
                 <div class="reading">
     				<h1>TCS</h1>
