--- a/wgu.html
+++ b/wgu.html
@@ -63,8 +63,7 @@
 					
 					<figure class="detail">
 						<img src="img/wgu-2.png" alt="Portfolio" />
-						<figcaption>App store <a href="https://apps.apple.com/us/app/mywgu-mobile/id1017785894" target="_blank">reviews</a>. No cherry picking here.</a>
-						</figcaption>
+						<figcaption>App store <a href="https://apps.apple.com/us/app/mywgu-mobile/id1017785894" target="_blank">reviews</a>.</figcaption>
 					</figure>
 					<a href="https://nathanrp.github.io">&larr; Back Home</a>
 				</div>
