--- a/mavenlink.html
+++ b/mavenlink.html
@@ -47,7 +47,7 @@
 			<section class="use-case">
 				<figure class="hero">
 					<img src="img/ml-1.gif" alt="Portfolio" />
-					<figcaption>Some visual design liberties were taken. &#x1f92b; Ok, ok, a lot were taken. &#x1f605;</figcaption>
+					<figcaption>Resource planning in Mavenlink.</figcaption>
 				</figure>
                 <div class="reading">
     				<h1>Mavenlink</h1>
@@ -57,8 +57,7 @@
 					<p>I was asked to be on the team that would be responsible for designing and building this. We started out with team of ~6 engineers, a product manager and myself. By the end it had grown to about double that to ensure that we could get everything we thought needed to get done to deliver enough value to the customer that they would be excited to use this new part of our product. My most important partner in this process was the product manager I worked with. Also the engineering team did an amazing job of building a front-end <abbr>UI</abbr> that was responsive and allowed the users to feel they could <a href="https://developer.apple.com/design/human-interface-guidelines/ios/overview/themes/" target="_blank">see the immediate, visible results of their actions.</a> I was responsible for conducting research (over 50 interviews), sharing reasons behind decisions and directions with business leadership, story mapping, building prototypes and designing the final user interface.</p>
 					<figure class="detail">
 						<img src="img/ml-4.jpg" alt="Portfolio" />
-						<figcaption>Not actual research participants. Honoring the privacy agreements yo! Photo by <a href="https://unsplash.com/@arlington_research?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Arlington Research</a> on <a href="https://unsplash.com/s/photos/computer-research?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
-						</figcaption>
+						<figcaption>We conducted a lot of research. Talking to customers about how they work.</figcaption>
 					</figure>
 					<p>There were a ton of trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable businss and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up displaying both. We released to all our customers about two years later.</p>
 					<figure class="detail">
@@ -75,7 +74,7 @@
                 </div>
 				<figure class="detail">
 					<img src="img/ml-5.gif" alt="Portfolio" />
-					<figcaption>Mobile concept. Sadly never built.</figcaption>
+					<figcaption>Mobile concept.</figcaption>
 				</figure>
 				<div class="reading">
 					<a href="https://nathanrp.github.io">&larr; Back Home</a>
