--- a/process.html
+++ b/process.html
@@ -47,13 +47,12 @@
 			<section class="use-case">
 				<figure class="hero">
 					<img src="img/ccc-hero.png" alt="Portfolio" />
-					<figcaption>Bring friends, the design process is fun! Photo by <a href="https://unsplash.com/@jeisblack?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Jason Blackeye</a> on <a href="https://unsplash.com/s/photos/beach-party?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Unsplash</a>
-                    </figcaption>
+					<figcaption>Bring friends, the design process is fun!</figcaption>
 				</figure>
                 <div class="reading">
     				<h1>Customers, collaboration, confidence. My take on the design process.</h1>
-                    <p>My design process is pretty simple. Talk to customers, a lot. Collaborate with your team: product managers, engineers, researchers, data, writers, <abbr>SME</abbr>s. Prototype until you are confident in your solution. Then release it into the wild and see what happens. Everything else is&hellip; it depends. </p>
-					<p>I have experience with other design methods and processes. Design sprints, story mapping, personas, journey maps, usability testing, wireframes, user flows, affinity maps, empathy maps, value proposition canvas, competitive analysis, research, heuristic evaluation, prototyping and more.</p>
+                    <p>Talk to customers, a lot. Collaborate with your team: product managers, engineers, researchers, data, writers, <abbr>SME</abbr>s. Prototype until you are confident in your solution. Then release it into the wild and see what happens. Everything else is&hellip; it depends. </p>
+					<p>There are a lot of design tools, methods and processes. Design sprints, story mapping, personas, journey maps, usability testing, wireframes, user flows, affinity maps, empathy maps, value proposition canvas, competitive analysis, research, heuristic evaluation, prototyping and more.</p>
 					<p>It&rsquo;s just that I have found that the three things I most consistently use and see the best results from can be generalized as: talking to customers, collaborating with the team, and prototyping and testing solutions.</p>
                 </div>
 				<div class="reading">
