--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="page">
 		<main>
 			<header>
-				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
+				<a href="/" class="pic home"><img src="img/me.png" alt="Me" /></a>
 				<h1>Hello, I&rsquo;m Nathan Philpot, thanks for taking the time to visit.</h1>
 				<p>At work I am a product designer. I design usable interfaces and enjoyable user experiences.</p>
 			</header>
