--- a/stuff/index.html
+++ b/stuff/index.html
@@ -38,7 +38,18 @@
 		<div class="stuff">
 			<h3><a href="4.html">Mavenlink</a></h3>
 			<p>Lead product designer on the resource management and project management areas of our product.</p>
-			<iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=10f0b5f-20&language=en_US&marketplace=amazon&region=US&placement=B014WDF9OC&asins=B014WDF9OC&linkId=24efad5361a505d689e93e87d5a29582&show_border=false&link_opens_in_new_window=true"></iframe>
+			<script type="text/javascript">
+				amzn_assoc_tracking_id = "10f0b5f-20";
+				amzn_assoc_ad_mode = "manual";
+				amzn_assoc_ad_type = "smart";
+				amzn_assoc_marketplace = "amazon";
+				amzn_assoc_region = "US";
+				amzn_assoc_design = "enhanced_links";
+				amzn_assoc_asins = "B014WDF9OC";
+				amzn_assoc_placement = "adunit";
+				amzn_assoc_linkid = "b1ffdd3eeb9dec93a8b9e995f5f37890";
+				</script>
+				<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 		</div>
 	</section>
 	<footer>
