--- a/stuff/index.html
+++ b/stuff/index.html
@@ -36,20 +36,9 @@
 	</header>
 	<section class="stuffs">
 		<div class="stuff">
-			<h3><a href="4.html">Mavenlink</a></h3>
-			<p>Lead product designer on the resource management and project management areas of our product.</p>
-			<script type="text/javascript">
-				amzn_assoc_tracking_id = "10f0b5f-20";
-				amzn_assoc_ad_mode = "manual";
-				amzn_assoc_ad_type = "smart";
-				amzn_assoc_marketplace = "amazon";
-				amzn_assoc_region = "US";
-				amzn_assoc_design = "enhanced_links";
-				amzn_assoc_asins = "B014WDF9OC";
-				amzn_assoc_placement = "adunit";
-				amzn_assoc_linkid = "b1ffdd3eeb9dec93a8b9e995f5f37890";
-				</script>
-				<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+			<figure><a href="https://www.amazon.com/gp/product/B014WDF9OC?ie=UTF8&th=1&psc=1&linkCode=li2&tag=10f0b5f-20&linkId=2cfd3abc8fde09c6c849539225b81330&language=en_US&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B014WDF9OC&Format=_SL160_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=10f0b5f-20&language=en_US" ></a><img src="https://ir-na.amazon-adsystem.com/e/ir?t=10f0b5f-20&language=en_US&l=li2&o=1&a=B014WDF9OC" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></figure>
+			<h3><a href="https://amzn.to/3FXYk5a">Next Level t-shirt</a></h3>
+			<p><abbr>XL</abbr> heather grey and <a href="https://amzn.to/3uS3TvM">sand</a> are &#x1F44D;.</p>
 		</div>
 	</section>
 	<footer>
