--- a/stuff/index.html
+++ b/stuff/index.html
@@ -32,7 +32,7 @@
 
 	<header>
 		<h1>Stuff</h1>
-		<p>Stuff I found interesting or helpful.</p>
+		<p>Stuff I find interesting and helpful.</p>
 	</header>
 	<section class="stuffs">
 		<div class="stuff">
