--- a/cheapandbest/index.html
+++ b/cheapandbest/index.html
@@ -31,7 +31,7 @@
 <body>
 
 	<header>
-		<h1>Stuff</h1>
+		<h1>Cheap &amp; Best</h1>
 		<p>Stuff I find interesting and helpful.</p>
 	</header>
 	<section class="stuffs">
