--- a/cheapandbest/index.html
+++ b/cheapandbest/index.html
@@ -32,7 +32,7 @@
 
 	<header>
 		<h1>Cheap &amp; Best</h1>
-		<p>Stuff I find interesting and helpful.</p>
+		<p>Stuff I find interesting.</p>
 	</header>
 	<section class="stuffs">
 		<div class="stuff">
