--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 				</div>
 				<h2>Work</h2>
 				<div class="work">
+					<h3><a href="5.html">CircleCI</a></h3>
+					<p>Lead designer on a few product experience teams. Helping our design team be the best they can be.</p>
+				</div>
+				<div class="work">
 					<h3><a href="4.html">Mavenlink</a></h3>
 					<p>Lead product designer on the resource management and project management areas of our product.</p>
 				</div>
