--- a/1.html
+++ b/1.html
@@ -55,7 +55,7 @@
 			<p>I had a lot to learn about taxes. There was a lot of expertise and knowledge inside the building. I started talking to everyone. I also did a lot of field observation. This was invaluable. Seeing tax pros use the product and interact with their clients was key to building a great product and experience. Hands down the best way to improve the experience is to watch people using your products.</p>
 			<p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
 			<p>A big part of the job was understanding the Tax Pro and the retail experience. The Tax Pro had to have confidence when using the product, because they had to be confident for their customers when preparing their taxes.</p>
-			<p>There where thousands of screens in this product and teams working on it around the world. So one thing I did was create &amp; and share principles to help product managers and engineers think about the experience.</p>
+			<p>There where thousands of screens in this product and teams working on it around the world. It was impossible to design everyone screen myself. So I created &amp; and shared design principles to help product managers and engineers think about the experience and help make design decisions.</p>
 		</main>
 		<section class="gallery">
 			<figure>
