--- a/3.html
+++ b/3.html
@@ -51,7 +51,7 @@
 				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
 				<h1><a href="https://www.tcs.com/banking-financial-services" target="_blank"><abbr>TCS</abbr><i>&nearr;</i></a></h1>
 			</header>
-			<p><abbr>TCS</abbr> is a giant whale of a company. According to their website, <abbr>TCS</abbr> employs 509,058 employees, which represent 155 nationalities across 46 countries. So having an impact on a product and organization that large was very difficult. I would like to say I practiced <abbr>UX</abbr> design there, but in reality I was doing a lot of <abbr>UI</abbr>, interaction, and visual design.</p>
+			<p><abbr>TCS</abbr> is a giant company. According to their website, <abbr>TCS</abbr> employs 509,058 employees, which represent 155 nationalities across 46 countries. So having an impact on a product and organization that large was very difficult. I would like to say I practiced <abbr>UX</abbr> design there, but in reality I was doing a lot of <abbr>UI</abbr>, interaction, and visual design.</p>
 			<p>It was a great learning experience. I learned how to use design tools to speed up my work. I saw a lot of the sales process. I worked in the financial services division and worked on products for banking, insurance, capital markets, corporate governance, and more.</p>
 			<p>A sample of a few, of the many, different <abbr>UI</abbr>s and products I worked while at <abbr>TCS</abbr>.</p>
 		</main>
